objects/ISR_Territory_DOSes__c.object
<CustomObject>
    <description>List of DOSes the ISR sells for</description>
    <fields>
        <fullName>DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOS</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only DOSs, EADs, NADs, EAVPs, and NAVPs may be selected!</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>DOS, EAD, NAD, NAS, EAS, EAVP, NAVP, AVP</value>
            </filterItems>
            <infoMessage>Please select a  DOS, EAD, NAD, EAVP, NAVP.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ISR_Territory_DOSes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISR_Group__c</fullName>
        <formula>CASE( ISR__r.ISR_Group__c , &quot;G1&quot;, &quot;G1&quot;, &quot;G2&quot;, &quot;G2&quot;, &quot;G3&quot;, &quot;G3&quot;, &quot;G4&quot;, &quot;G4&quot;, &quot;G5&quot;, &quot;G5&quot;, &quot;G6&quot;, &quot;G6&quot;, &quot;G7&quot;, &quot;G7&quot;, &quot; &quot;)</formula>
        <label>ISR_Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only ISRs can be selected.</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>ISR</value>
            </filterItems>
            <infoMessage>Please select an ISR</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ISR_Territory_DOSes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key_Rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Key Rep from the list.</errorMessage>
            <filterItems>
                <field>User.Forecasting_Channel__c</field>
                <operation>contains</operation>
                <value>Canada, Central North, Central South, Enterprise, National, North, PFW, South, Truck, West</value>
            </filterItems>
            <infoMessage>Please select Key Rep from the list.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ISR_Territory_DOSes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ISR Territory DOSes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ISR__c</columns>
        <columns>ISR_Group__c</columns>
        <columns>Key_Rep__c</columns>
        <columns>DOS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISRs</fullName>
        <columns>ISR__c</columns>
        <columns>DOS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>ISRs</label>
    </listViews>
    <nameField>
        <displayFormat>ID - {0000}</displayFormat>
        <label>ISR Territory DOS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISR Territory DOSes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>